# CPPGame

./: .gitmodules  CMakeLists.txt  CPPGame.sln  CPPGame.vcxproj  CPPGame.vcxproj.filters  README.md  main.cpp
Editor/: CMakeLists.txt  CoreFunctionWidget.cpp  Editor.cpp  EditorView.cpp  EditorView.h  EditorView.ui  EidtorView.cpp  EidtorView.h  EidtorView.ui  FileView.cpp  FileView.h  FileView.ui  FormatConversion.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.h  OutputView.cpp  OutputView.h  OutputView.ui  PropertiesView.cpp  PropertiesView.h  PropertiesView.ui  RuningView.cpp  RuningView.h  RuningView.ui  StructureView.cpp  StructureView.h  StructureView.ui
FrameWork/: CMakeLists.txt  ModuleConfig.h  main.cpp
FrameWork/Common/: Allocator.cpp  Allocator.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  BaseApplication.cpp  BaseApplication.h  BaseGraphicsManager.cpp  BaseGraphicsManager.h  Buffer.h  CMakeLists.txt  CommonIniter.h  Config.h  GameLogic.h  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.h  IBehaviour.h  IShaderManager.h  Image.h  InputManager.cpp  InputManager.h  MemoryManager.cpp  MemoryManager.h  OpenGLDebugger.h  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.h  SceneManager.h  ShaderBase.h  ShaderManager.h  main.cpp
FrameWork/Common/3dloader/: CMakeLists.txt  ObjLoader.cpp  ObjLoader.h  stb_image.h
FrameWork/Common/Parser/: BMPParser.h  CMakeLists.txt  MaterialParser.h  ObjLoader.cpp  ObjLoader.h  ObjMaterialLoader.cpp  ObjMaterialLoader.h  ObjMaterialParser.h  ObjParser.cpp  ObjParser.h  ObjUtils.h  SceneParser.h  TextureParser.h
FrameWork/Common/Scene/: CMakeLists.txt  Camera.cpp  Camera.h  ClassIDs.h  Component.h  GameObject.cpp  GameObject.h  Light.h  Material.cpp  Material.h  MaterialManager.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  MeshRendererCommand.cpp  MeshRendererCommand.h  Object.h  Renderer.cpp  Renderer.h  RendererCommand.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.h  ShaderData.h  Texture.h  Transform.cpp  Transform.h
FrameWork/Common/UI/: Button.cpp  Button.h  CMakeLists.txt  CanvasRenderer.cpp  CanvasRenderer.h  Font.cpp  Font.h  Image.cpp  Image.h  Label.cpp  Label.h  Widget.cpp  Widget.h
FrameWork/Event/: CMakeLists.txt  DataEventDispatcher.h  EventDispatcherManager.h  EventID.h  IEventDispatcher.h  KeyEventDispatcher.h
FrameWork/File/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  File.cpp  File.h  FileUtils.cpp  FileUtils.h  IFile.h  IFileSystem.h
FrameWork/Interface/: CMakeLists.txt  IApplication.h  IBehaviour.h  IRuntimeModule.h  ISceneParser.h  ISerializable.h  IShaderManager.h  ImageParser.h
FrameWork/Logger/: CMakeLists.txt  easylogging++.h
FrameWork/Math/: CMakeLists.txt  Math.h  MyMath.h
FrameWork/Memory/: Allocator.cpp  Allocator.h  AutoreleasePool.cpp  AutoreleasePool.h  Buffer.h  CMakeLists.txt  MemoryManager.cpp  MemoryManager.h  Ref.cpp  Ref.h
FrameWork/NewRender/: CMakeLists.txt  Types.h
FrameWork/NewRender/Core/: CMakeLists.txt  GERBuffer.cpp  GERBuffer.h  GERCommandBuffer.cpp  GERCommandBuffer.h  GERDevice.cpp  GERDevice.h  GERFrameBuffer.cpp  GERFrameBuffer.h  GERInputAssembler.cpp  GERInputAssembler.h  GERMaterial.h  GERObject.h  GERShader.cpp  GERShader.h  GERTexture.cpp  GERTexture.h
FrameWork/NewRender/GLSL/: CMakeLists.txt  GLSLBuffer.cpp  GLSLBuffer.h  GLSLCommandBuffer.cpp  GLSLCommandBuffer.h  GLSLDevice.cpp  GLSLDevice.h  GLSLFrameBuffer.cpp  GLSLFrameBuffer.h  GLSLFunc.cpp  GLSLFunc.h  GLSLInputAssembler.cpp  GLSLInputAssembler.h  GLSLObject.h  GLSLShader.cpp  GLSLShader.h  GLSLTexture.cpp  GLSLTexture.h  GPUObject.h
FrameWork/NewRender/Pipeline/: PipelineDefines.h  RenderFlow.cpp  RenderFlow.h  RenderPipeline.cpp  RenderPipeline.h  RenderStage.cpp  RenderStage.h
FrameWork/NewRender/Test/: CmakeLists.txt  main.cpp
FrameWork/Parser/: BMPParser.h  CMakeLists.txt  IParser.h  MaterialParser.h  ObjLoader.cpp  ObjLoader.h  ObjParser.h  ParserManager.cpp  ParserManager.h  SceneParser.h  TextureParser.h  stb_image.h
FrameWork/Render/: BaseGraphicsManager.cpp  BaseGraphicsManager.h  CMakeLists.txt  Frame.h  GraphicsManager.cpp  GraphicsManager.h  IDrawPass.cpp  IDrawPass.h  IPass.h  ISubPass.h  ShaderBase.h  readme.md
FrameWork/Render/Draw/: CMakeLists.txt  DeferredDrawPass.h  ForwardDrawPass.h
FrameWork/Render/Platform/: CMakeLists.txt
FrameWork/Render/Sub/: CMakeLists.txt  CSMTest.h  CubPass.h  DeferredPass.h  ForwardPass.h  ImGuiPass.h  ShadowPass.cpp  ShadowPass.h
FrameWork/Scene/: AssetManager.cpp  AssetManager.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  ClassIDs.h  Component.cpp  Component.h  Cube.cpp  Cube.h  Frustum.h  GameObject.cpp  GameObject.h  IComponent.h  IntersectionTests.h  Light.h  Material.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Object.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Texture.h  Transform.cpp  Transform.h
FrameWork/Scene/Parser/: CMakeLists.txt  IParser.h  MaterialParser.h  ObjLoader.cpp  ObjParser.h  ParserManager.cpp  ParserManager.h  TextureParser.h
FrameWork/Scene/UI/: Font.h  (+12 more)
FrameWork/Utils/: CMakeLists.txt  Clock.cpp  Clock.h  Defines.h  SerializableHelper.cpp  SerializableHelper.h
GameLogic/: CMakeLists.txt  GameLogicConfig.cpp  MyGameLogic.cpp  MyGameLogic.h
Platform/Win/: CMakeLists.txt  GamePlatform-opengl.cpp  GamePlatform-opengl.h
Platform/Windows/: CMakeLists.txt  GamePlatform-opengl.cpp  GamePlatform-opengl.h  GraphicsManager.cpp  GraphicsManager.h  InputManagerWindows.cpp  InputManagerWindows.h  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLDebugger.h  Shader.h  WindowsApplication.cpp  WindowsApplication.hpp  WindowsConfig.h  main.cpp
RHI/OpenGL/: CMakeLists.txt  GraphicsManager.cpp  GraphicsManager.h  MShader.cpp  MShader.h  OpenGLCoinfig.h  OpenGLShaderManager.cpp  OpenGLShaderManager.h  Shader.cpp  Shader.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.h
Test/: AssetLoaderTest.cpp  CMakeLists.txt  InputManagerTest.cpp  MaterialTest.cpp  TextRenderer.cpp
(+120 files in other folders)
